Fix: Force header behind the main content

--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -6,6 +6,7 @@
 	align-items: center;
 	gap: 2rem;
 	user-select: none;
+	z-index: -1;
 }
 
 .text {
